--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Interactive Story Timeline -->
     <section id="story" class="story-section">
         <div class="container">
-            <h2 class="section-title">THE JOURNEY</h2>
+            <h2 class="section-title">STORY</h2>
                     <!-- Scene 1: The emotional foundation of the story -->
             <div class="story-timeline">
                 <div class="timeline-item" data-scene="1">
@@ -152,7 +152,7 @@
     <section id="cast" class="cast-section">
         <div class="container">
      <!-- Section heading -->
-            <h2 class="section-title">THE SOULS</h2>
+            <h2 class="section-title">CAST</h2>
             
     <!-- Cast cards: flip on hover to reveal more details -->
             <div class="cast-cards">
@@ -229,7 +229,7 @@
     <!-- Interactive Experience Gallery -->
     <section id="experience" class="experience-section">
         <div class="container">
-            <h2 class="section-title">BEHIND THE MAGIC</h2>
+            <h2 class="section-title">EXPERIENCE</h2>
             
             <div class="experience-grid">
                 <div class="experience-item" data-experience="location">
